public class InstrumentSpec {
}
